# disease_classification

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
infer/: __init__.py  dataset.py  features.py
infer/modeling/: predict.py  train.py
notebooks/: disease_classification.ipynb
paper_analysis/: __init__.py  dataset.py  logger.py  plots.py  prompts.py
paper_analysis/modeling/: predict.py
